test/compile_errors/err_issue181_unsafe_prefix_ident.w
//! expect-error: unsafe prefix requires a raw pointer dereference or raw pointer index

fn main:
    let x = 1
    let y = unsafe x
    y
